Fix scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-html {
+html, body {
     color: white;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     height: 100%;
     margin: 0;
-
+    overflow: hidden;
 }
 
 .container {
